--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,93 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #fafafa;
+}
+header {
+  background-color: #6d28d9;
+  padding: 2rem 0;
+  text-align: center;
+  color: white;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: "Fredoka", sans-serif;
+}
+legend {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-family: "Fredoka", sans-serif;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+}
+main,
+form {
+  margin: 5rem auto 0 auto;
+  max-width: 1000px;
+  width: 90%;
+  padding: 3rem;
+  background-color: white;
+  box-shadow: -1px 15px 62px -35px rgba(0, 0, 0, 0.96);
+  -webkit-box-shadow: -1px 15px 62px -35px rgba(0, 0, 0, 0.96);
+  -moz-box-shadow: -1px 15px 62px -35px rgba(0, 0, 0, 0.96);
+  border-radius: 0.8rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@media (min-width: 768px) {
+  .form-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    align-items: center;
+  }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+form label {
+  display: block;
+  margin: 1rem 0;
+  color: #71717a;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  form label {
+    margin: 0.5rem 0;
+  }
+}
+
+form input[type="text"] {
+  width: 100%;
+  border-radius: 0.3rem;
+  border: 1px solid #cbd5e1;
+  padding: 0.5rem;
+}
+form input[type="submit"] {
+  background-color: #7c3aed;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: "Fredoka", sans-serif;
+  color: white;
+  padding: 0.8rem;
+  display: block;
+  width: 100%;
+  margin-top: 2rem;
+}
+form input[type="submit"]:hover {
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: #6d28d9;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.alerta {
+  border-bottom: 2px solid #d51007;
+  text-align: center;
+  padding-bottom: 0.5rem;
+  width: auto;
+  display: block;
+}
+
+.text-center {
+  text-align: center;
+}
+.letra {
+  white-space: pre-wrap;
 }
